# vscode-r

./: .gitattributes  .gitignore  .gitmodules  BUILDING-UNIX.md  BUILDING-WIN32.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README  README.md  build.cmd  build.md  build.sh  debug.cmd  linux-build.proj  nuget.config  package.cmd  zipconf.h
Host/Linux/: Microsoft.R.Host
Host/Mac/: Microsoft.R.Host
Host/Mac/arm64/: Microsoft.R.Host
Host/Mac/x64/: Microsoft.R.Host
lib/x64/: R.def  R.exp  R.lib  Rgraphapp.def  Rgraphapp.exp  Rgraphapp.lib
lib/x86/: R.def  R.exp  R.lib  Rgraphapp.def  Rgraphapp.exp  Rgraphapp.lib
src/: Microsoft.R.Host.sln  Microsoft.R.Host.vcxproj  Microsoft.R.Host.vcxproj.filters  R.Build.Version.targets  R.Settings.NetCore.props  R.Settings.props  R.sln  RPlotHost.cpp  RPlotHost.h  Rapi.h  Resource.rc  Rgraphicsapi.h  blobs.cpp  blobs.h  detours.cpp  detours.h  devdesc_wrapper.cpp  devdesc_wrapper.h  eval.h  exports.cpp  exports.h  grdevices.h  grdeviceside.cpp  grdeviceside.h  grdevicesvs.cpp  grdevicesvs.h  grdevicesxaml.cpp  grdevicesxaml.h  host.cpp  host.h  internal_rapi.h  json.cpp  json.h  loadr.cpp  loadr.h  log.cpp  log.h  main.cpp  message.cpp  message.h  (+19 more)
src/Common/BuildTasks/: Microsoft.Common.BuildTasks.csproj
src/Common/Core/Impl/: Microsoft.R.Common.Core.csproj  TaskUtilities.cs
src/Common/Core/Impl/Extensions/: CoreShellExtensions.cs  RandomExtensions.cs  StringExtensions.cs  TaskExtensions.cs
src/Common/Core/Impl/Logging/: Logger.cs
src/Common/Core/Impl/OS/: ArchitectureString.cs  IProcessServices.cs  ProcessExtensions.cs
src/Common/Core/Impl/Services/: PropertyDictionary.cs  ServiceContainerExtensions.cs  ServiceManagerExtension.cs
src/Common/Core/Impl/Shell/: ShellExtensions.cs
src/Common/Core/Impl/Tasks/: CancellationTokenUtilities.cs  EventTaskSource.cs  ITaskService.cs  TaskCompletionSourceEx.cs
src/Common/Core/Impl/Threading/: AsyncManualResetEvent.cs  AsyncReaderWriterLock.ExclusiveReaderLock.cs  AsyncReaderWriterLock.cs  BinaryAsyncLock.cs  IAsyncReaderWriterLockToken.cs  (+2 more)
src/Common/Core/Test/: Microsoft.Common.Core.Test.csproj
src/Containers/Impl/: Microsoft.R.Containers.csproj
src/Containers/Impl/Docker/: IDockerService.cs  LocalDockerService.cs
src/Host/API/Impl/: Microsoft.R.Host.Client.API.csproj  Microsoft.R.Host.Client.API.nuspec  RHostSession.cs  project.json
src/Host/Broker/Impl/: Microsoft.R.Host.Broker.csproj  Microsoft.R.Host.Broker.csproj.DotSettings  Resources.Designer.cs  Resources.resx
src/Host/Client/Impl/: Microsoft.R.Host.Client.csproj  Resources.Designer.cs  Resources.resx
src/Host/Process/: .gitignore  .gitmodules  BUILDING-UNIX.md  BUILDING-WIN32.md  CMakeLists.txt  LICENSE.md  README.md  build.sh  linux-build.proj
src/Host/Process/lib/: README
src/Host/Process/src/: Microsoft.R.Host.vcxproj  Microsoft.R.Host.vcxproj.filters  R.Build.Version.targets  Rgraphicsapi.h  blobs.h  grdeviceside.cpp  grdeviceside.h  host.cpp  host.h  json.h  loadr.cpp  loadr.h  log.cpp  log.h  main.cpp  packages.config  project.cpp  project.h  r_api.h  r_gd_api.h  r_util.cpp  r_util.h  rstrtmgr.h  stdafx.h  transport.cpp  util.h
src/Host/Protocol/Impl/: Message.cs  Microsoft.R.Host.Protocol.csproj  SessionCreateRequest.cs
src/Host/Protocol/Test/: Microsoft.R.Host.Protocol.Test.csproj
src/Host/UserProfile/Impl/: Microsoft.R.Host.UserProfile.csproj
src/LanguageServer/Impl/: GlobalSuppressions.cs  LanguageServer.cs  Microsoft.R.LanguageServer.csproj  Program.cs
src/LanguageServer/Impl/Completions/: CompletionManager.cs  SignatureManager.cs
src/LanguageServer/Impl/Definitions/: IClient.cs  IUIService.cs
src/LanguageServer/Impl/Documents/: DocumentEntry.cs
src/LanguageServer/Impl/Extensions/: EditorBufferExtensions.cs
src/LanguageServer/Impl/Formatting/: CodeFormatter.cs
src/LanguageServer/Impl/InteractiveWorkflow/: Console.cs  REvalSession.cs  RInteractiveWorkflow.cs  RSessionCallback.cs
src/LanguageServer/Impl/Protocol/: Enums.cs  Messages.cs  Structures.cs
src/LanguageServer/Impl/Server/: ISettingsManager.cs  LanguageServerSettings.cs  RConnection.cs  SettingsManager.cs
src/LanguageServer/Impl/Services/: Client.cs  CoreShell.cs  ImageService.cs  ServiceContainer.cs  TelemetryService.cs  UIService.cs
src/LanguageServer/Impl/Settings/: IREngineSettings.cs
src/LanguageServer/Impl/Symbols/: DocumentSymbolsProvider.cs
src/LanguageServer/Impl/Text/: ViewCaret.cs
src/LanguageServer/Impl/Threading/: IMainThreadPriority.cs  MainThread.cs  MainThreadExtensions.cs  SingleThreadSynchronizationContext.cs  TaskService.cs
src/LanguageServer/Impl/Validation/: DiagnosticsPublisher.cs
src/LanguageServer/Test/: GlobalSuppressions.cs  Microsoft.R.LanguageServer.Test.csproj
src/LanguageServer/Test/Threading/: MainThreadTest.cs
src/Languages/Core/Impl/: Microsoft.Languages.Core.csproj
src/Languages/Core/Test/: Microsoft.Languages.Core.Test.csproj
src/Languages/Editor/Impl/: Microsoft.Languages.Editor.csproj
src/Linux/Containers/Impl/: Microsoft.R.Containers.Linux.csproj
src/Linux/Setup/DebPackage/: build_rtvs_deb
src/R/Components/Impl/: Microsoft.R.Components.csproj
src/R/Components/Test/: Microsoft.R.Components.Test.csproj
src/R/Core/Impl/: Microsoft.R.Core.csproj
src/R/Core/Test/: Microsoft.R.Core.Test.csproj
src/R/Editor/Impl/: Microsoft.R.Editor.csproj
src/R/Editor/Test/: Microsoft.R.Editor.Test.csproj
src/R/Platform/Impl/: Microsoft.R.Platform.csproj  PlatformServiceProvider.cs
src/UnitTests/Core/Impl/: Microsoft.UnitTests.Core.csproj
src/VSCode/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .vscodeignore  CHANGELOG.md  README.md  VsCode.R.Extension.csproj  package-lock.json  package.json
src/VSCode/ls/: Microsoft.R.Host.Broker.Unix.deps.json  Microsoft.R.LanguageServer.deps.json  Microsoft.R.LanguageServer.runtimeconfig.dev.json
src/VSCode/snippets/: r.json
src/VSCode/src/: README.md  commands.ts  constants.ts  deferred.ts  dependencies.ts  editor.ts  extension.ts  plotView.ts  rengine.ts  repl.ts  replTerminal.ts  types.ts
(+267 files in other folders)
